# tinycloud

api/: .pre-commit-config.yaml  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 37d385ef75a8_add_is_uploaded_column_to_files.py  56ea7a9ed930_add_users.py  a05b3b4fb57a_add_sessions.py  a7d4f58d76c0_add_files.py  a8d1f42eda11_add_stuff.py  ed7bc7032574_inital.py  efb94196c784_add_server_default.py
api/app/: config.py  database.py  dependencies.py  main.py
api/app/fs/: __init__.py
api/app/models/: __init__.py  files.py  session.py  users.py
api/app/routers/: auth.py  files.py  users.py
