[tool.poetry]
name = "api"
version = "0.1.0"
description = "API for Tinycloud"
authors = ["Marius Meschter <git@meschter.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.269"

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "N"
]
ignore = [
    "E501",
]

[tool.isort]
profile = "black"

[tool.pyright]
strict = true

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
alembic = "^1.11.1"
sqlalchemy = "^2.0.14"
psycopg = {extras = ["binary", "pool"], version = "^3.1.9"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
